[package]
name = "wireguard_nif"
version = "0.3.7"
authors = ["Andrew Rousset <andrew@firezone.dev>"]
edition = "2018"

[lib]
name = "wireguard_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.25"
# wireguard-control 1.5.4 release on github instead of crates.io
wireguard-control = { git = "https://github.com/tonarino/innernet", rev = "a6c918a581bc66824ca29e6c84be902f995d9726" }
